# Kybr

./: Cargo.toml  README.md  build.rs
data/: code.data  keys.data
scripts/: download.py
src/: anneal.rs  gui.rs  input.rs  key_converter.rs  keyboard.rs  lib.rs  main.rs  problem.rs  remapper.rs  uhid.rs  uhid_keyboard.rs
