[package]
name = "kybr"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.71.1"

[dependencies]
argmin = "0.10.0"
argmin-observer-slog = "0.1.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
iced = "0.13.1"
include_data = "1.0.1"
phf = { version = "0.11.3", features = ["macros"] }
rand = "0.9.0"
sudo = "0.6.0"
